--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Hero Section -->
         <section id="hero" class="text-center mb-24">
             <h1 class="text-5xl md:text-7xl font-extrabold text-gray-800 mb-4 tracking-tight">Ziad Mohamed</h1>
-            <p class="text-2xl md:text-3xl accent-color font-light mb-10">Full Stack Developer | ERP Integration Specialist</p>
+            <p class="text-2xl md:text-3xl accent-color font-light mb-10">Software Engineer, Full Stack Developer</p>
             
             <!-- Contact Info -->
             <div class="flex justify-center items-center space-x-6 md:space-x-10 text-base flex-wrap">
